--- a/app.css
+++ b/app.css
@@ -1,16 +1,29 @@
 img {
-    height: 200px;
     width: max-content;
+}
+
+.top img {
+    max-width: 10rem;
+    max-height: 10rem;
+}
+
+.bottom img {
+    max-width: 15rem;
+    max-height: 15rem;
 }
 
 .tops, .bottoms  {
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
 }
 
 .top, .bottom {
     display: flex;
     max-width: 25%;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
 
 .capsule-outfits {
