--- a/app.css
+++ b/app.css
@@ -1,3 +1,34 @@
+body {
+    font-family: 'Cardo', serif;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+}
+
+.capsule-form {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    align-content: space-around;
+}
+
+button {
+    padding: 0.5rem;
+    margin: 1.5rem;
+}
+
+input {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
 img {
     width: max-content;
 }
