Add functionality to hide/display form, improve layout

--- a/app.css
+++ b/app.css
@@ -5,6 +5,10 @@ body {
     flex-direction: column;
 }
 
+.hidden {
+    display: none;
+}
+
 .capsule-form {
     display: flex;
     flex-direction: column;
